# EStour

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  index.html  index.php  pyproject.toml  requirements.txt
.github/workflows/: main.yml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py  0002_initial.py
core/: urls.py
core/settings/: base.py  heroku.py
pages/: urls.py  views.py
places/: admin.py  models.py  urls.py  views.py
places/migrations/: 0001_initial.py  0002_remove_place_card_img_remove_place_latitude_and_more.py  0003_place_address_name.py  0004_remove_photo_created_at_comment.py
public/assets/stylesheet/: categoria.css  global.css  index.css  info.css
public/pages/: categoria.php  index.php  info.php
public/pages/components/: footer.html  head.html  head.php  header.html
static/css/: categorias.css  destaques.css  footer.css  header.css  style-btp.css  style.css
static/js/: home.js
static/places/css/: categorias.css  placeDetail.css  placesList.css
templates/account/: email_confirm.html  login.html  signup.html  verification_sent.html
templates/components/: carousel.html  categorias.html  destaques.html  footer.html  header.html  maps.html  stars.html
templates/pages/: base.html  home.html
templates/places/: place_detail.html  place_list.html
